fix nav display on mobile, image responsiveness and footer

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -11,6 +11,9 @@
     position: absolute;
     top: 40%;
     width: 100%;
+    @include mQ($MinMobile, $MaxMobile){
+      top: 35%;
+    }
   }
   img{
     width: 100%;
@@ -37,6 +40,7 @@
     height: 180vmin;
     background: {
       repeat: no-repeat;
+      position: center;
     }
   }
 }
@@ -95,16 +99,27 @@
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box;
+  @include mQ($MinMobile, $MaxMobile){
+    width: 80%;
+    margin: auto;
+  }
 }
 
 @mixin button{
   cursor: pointer;
   background-color:  $blue;
   color: $white;
+  width: 100%;
   float : right;
+  margin: 10px 0px;
   border-color: darken($blue, 4);
   &:hover{
     background-color: lighten($blue, 6);
+  }
+  @include mQ($MinMobile, $MaxMobile){
+    width: 80%;
+    float: none;
+
   }
 }
 
@@ -134,6 +149,12 @@
     left: 50%;
     top: 90px;
     margin-left: -480px;
+  }
+}
+
+@mixin desktop($arg){
+  @media screen and (min-width: $arg){
+    @content;
   }
 }
 
