--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,4 +1,5 @@
 @import "variable";
+@import "mixins";
 // Outer navigation wrapper
 
 // Navigation
@@ -39,14 +40,6 @@ nav {
   }
 }
 
-// Dropdown list binds to JS toggle event
-.nav-dropdown {
-  position: absolute;
-  display: none;
-  z-index: 1;
-  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
-}
-
 /* Mobile navigation */
 
 // Binds to JS Toggle
@@ -58,14 +51,17 @@ nav {
   background: $white;
   height: $nav-height;
   width: $nav-height;
+  @include mQ($MinMobile, $MaxMobile){
+    display: block;
+  }
 }
 @media only screen and (max-width: $MaxMobile) {
   // Hamburger nav visible on mobile only
-  .nav-mobile {
-    display: block;
-  }
+
   nav {
    width: 100%;
+   display: block;
+
     padding: $nav-height 0 15px;
     ul {
       display: none;
@@ -75,21 +71,22 @@ nav {
           padding: 15px;
           line-height: 20px;
         }
-        ul li a {
-          padding-left: 30px;
-        }
       }
     }
   }
-  .nav-dropdown {
-    position: static;
-  }
+
 }
-@media screen and (min-width: $MinMobile) {
-  .nav-list {
+
+.nav-list{
+  @include desktop($MaxMobile){
+    display: block !important;
+  }
+  @include mQ($MinMobile, $MaxMobile){
     display: none;
   }
 }
+
+
 #nav-toggle {
   position: absolute;
   left: 18px;
