--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -33,7 +33,7 @@
   max-width: $content-width;
   margin: 0 auto;
 }//nav-container
-// 
+//
 // nav {
 //   float: right;
 //   ul {
@@ -95,6 +95,7 @@ section{
 }//firstSection
 
 footer{
+  @include clearFix;
   background: $black;
   color: $white;
   padding: 40px 0;
@@ -155,8 +156,8 @@ footer{
     @include mQ($MinMobile, $MaxMobile){
       @include grid(1 , 5%);
       img{
-        height: 320px;
-        width: 90%;
+        height: auto;
+        max-width: 100%;
       }
 
     }
